# xy

./: .gitignore  .hgignore  AUTHORS  CONVENTIONS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  check-calls  check-mem  check-threads  check-tree  config.h.in  configure  configure.in  debug  gendoc  leaktest  makedist  memcheck
docs/: Makefile.am  Makefile.in  apiref.rst  conf.py  index.rst  overview.rst
docs/source/: conf.py  index.rst
examples/broadcast/: in-ruby.rb  print-broadcasts.py  print-broadcasts.rb  speak-broadcasts.py  speak-broadcasts.rb
examples/ipc/: afunix_send.c  in-python.py
lib/: .gitignore  Makefile.am  Makefile.in  broadcast.c  broadcast.h  configuration.c  configuration.h  constants.h  core.h  die.c  event.c  event.h  inotify.c  inotify.h  ipc.c  ipc.h  layout.c  layout.h  lifecycle.c  lifecycle.h  logging.c  logging.h  monitor.c  monitor.h  osd.c  osd.h  state.c  state.h  sysinfo.c  sysinfo.h  types.h  util.c  util.h  xy.c  xy.h  xyxlib.c  xyxlib.h
resources/: common.sh  log4crc  maketest
src/: .gitignore  Makefile.am  Makefile.in  broadcast.c  broadcast.h  color.c  color.h  configuration.c  configuration.h  constants.h  core.h  die.c  display.c  display.h  event.c  event.h  ipc.c  ipc.h  lifecycle.c  lifecycle.h  logging.c  logging.h  main.c  monitor.c  monitor.h  osd.h  restart.c  restart.h  screen.c  screen.h  startup.c  startup.h  state.c  state.h  sysinfo.c  sysinfo.h  test_suite.c  tests.c  util.c  util.h  (+8 more)
tests/: .gitignore  Makefile.am  Makefile.in  core_tests.c  leaktest  monitor_tests.c  test_suite  test_suite.c  util_tests.c  vg_suppressions  xlib_tests.c
xy-trunk/: Makefile.in  README  configure  configure.in
xy-trunk/src/: color.c  configuration.h  display.c  restart.h  screen.h  types.h  xyxlib.h
xy/trunk/: config.h.in  debug
xy/trunk/src/: core.h  osd.c  sysinfo.c  sysinfo.h  wmcheck.h  xy.c  xyxlib.c
