#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([xy], [2011], [https://enter.bugs.here])
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])

CFLAGS="-std=c99 -O0 -ggdb3 -Wall -Wunused -Wextra -Wno-unused-parameter"

AM_PROG_CC_C_O

AC_PATH_X

PKG_CHECK_MODULES([XLIB], [x11])
PKG_CHECK_MODULES([XINERAMA], [xinerama])
PKG_CHECK_MODULES([XFT], [xft])

PKG_CHECK_MODULES([LIBUSB], [libusb])

AC_CHECK_LIB(xosd, xosd_create)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_HEADERS(xosd.h)

AC_CHECK_LIB(log4c, log4c_init)
AC_CHECK_HEADERS(log4c.h)

AC_ARG_ENABLE(tests,
    AS_HELP_STRING([--disable-tests], [Disable unit tests]),
    [disable_tests=yes],[disable_tests=no])

if test "x$disable_tests" != "xyes"; then
    PKG_CHECK_MODULES(CHECK, [check >= 0.9.8], have_check="yes", have_check="no")
else
    have_check=no
fi

if test "x$disable_tests" = "xno" -a "x$have_check" != "xyes"; then
    AC_MSG_ERROR([Testing dependencies not met.  Check is required.])
fi

AM_CONDITIONAL(HAVE_CHECK, test "x$have_check" = "xyes")

AC_TYPE_SIZE_T

AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
])

AC_OUTPUT
