#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([xy], [2011], [https://enter.bugs.here])
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])

CFLAGS="-std=c99 -O0 -ggdb3 -Wall -Wunused -Wextra -Wno-unused-parameter"

AC_PROG_CC

AC_PATH_X

PKG_CHECK_MODULES([XLIB], [x11])
PKG_CHECK_MODULES([XINERAMA], [xinerama])
PKG_CHECK_MODULES([XFT], [xft])

PKG_CHECK_MODULES([LIBUSB], [libusb])

AC_CHECK_LIB(xosd, xosd_create)
AC_CHECK_HEADERS(xosd.h)

AC_CHECK_LIB(log4c, log4c_init)
AC_CHECK_HEADERS(log4c.h)

AC_TYPE_SIZE_T

AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
])

AC_OUTPUT
